re-add overflow scrolling for gr-panel, fixed position for leases calendar

--- a/kahuna/public/js/components/gr-panels/gr-panels.css
+++ b/kahuna/public/js/components/gr-panels/gr-panels.css
@@ -19,6 +19,7 @@
     position: fixed;
     background: rgba(68, 68, 68, 0.9);
     transition: width 0.2s;
+    overflow: auto;
 }
 
 .gr-panel--locked .gr-panel__content {
